--- a/sections/PCB.tex
+++ b/sections/PCB.tex
@@ -1,15 +1,22 @@
 \section{Elaboración del circuito impreso}
 
-En la figura \ref{fig:pcb-implementada} se puede observar la placa impresa ya perforada,
-previo a la soldadura de los componentes.
+En las figuras \ref{fig:pcb-implementada} y \ref{fig:pcb-soldada} se puede observar la placa impresa perforada y
+con los componentes soldados.
 Se comprobó que todos los componente elegidos en el software tuvieran la misma distribución de pines que en su versión física. 
 Se imprimió una primera versión y se realizaron correcciones en base a los resultados obtenidos al probar los componentes. \cite{pcb-atei}
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/pcb-implementada.jpeg}
-    \caption{Placa impresa previo a la soldadura.}
+    \caption{Placa impresa previo a la soldadura}
     \label{fig:pcb-implementada}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/pcb-soldada.png}
+    \caption{Placa impresa ensamblada}
+    \label{fig:pcb-soldada}
 \end{figure}
 
 A continuación, se detallan todos los criterios aplicados para la inclusión de cada componente en el circuito impreso en base a las recomendaciones 
