--- a/sections/conclusiones.tex
+++ b/sections/conclusiones.tex
@@ -12,13 +12,10 @@ Se obtuvieron buenos resultados en las simulaciones y manteniendo un nivel de co
 Se implementó un prototipo que incluye el generador de señal PWM, el convertidor DC-DC y su driver.
 Se obtuvieron las señales de tensión y corriente sobre los elementos operando a lazo abierto con un ciclo de trabajo fijo, logrando resultados aceptables respecto a las simulaciones.
 Para que el prototipo tenga todas las etapas y funciones del cargador de 36V, resta implementar el rectificador a la entrada del convertidor, el selector de modo de funcionamiento y cerrar el lazo del circuito de control.
-El problema más importante que se debe resolver es la diferencia de tensión en la salida en comparación con las simulaciones.
-Esto se debe a una fuerte dependencia de la tensión de salida con la resistencia de carga,
-lo cual no es apreciable en la simulación.
+El problema más importante que se debe resolver es la diferencia de tensión en la salida en comparación con las simulaciones, donde no se aprecia una fuerte dependencia de la misma con la resistencia de carga.
 
 Existen múltiples mejoras a implementar en una futura versión del prototipo.
-Primeramente se debe continuar con la investigación sobre las oscilaciones de alta frecuencia presentes en las formas de onda, ya que se cree que se deben a la resonancia de algún tanque LC.
-La segunda mejora implica aumentar la amplitud y mejorar la forma de onda de la señal de excitación de los MOSFETs, ya que la misma impacta directamente en la eficiencia del convertidor.
+Primeramente se debe continuar con la investigación sobre las oscilaciones de alta frecuencia presentes en las formas de onda, ya que se cree que se deben a la resonancia de elementos parásitos del circuito.
+En segundo lugar se debe aumentar la amplitud y mejorar la forma de onda de la señal de excitación de los MOSFETs, ya que la misma impacta directamente en la eficiencia del convertidor.
 También se debe elegir el núcleo adecuado para los transformadores y el inductor. Al estar limitados por la disponibilidad, los mismos quedaron sobre dimensionados. 
-Debido a esto, los transformadores se conectan mediante cables y borneras a la PCB. 
-Por lo tanto, el futuro diseño de la PCB debería incluirlos en el circuito impreso.
+Debido a esto, los transformadores se conectan mediante cables y borneras a la PCB, por lo tanto, el futuro diseño de la PCB debería incluirlos en el circuito impreso.
