--- a/sections/diseño.tex
+++ b/sections/diseño.tex
@@ -526,7 +526,7 @@ Un valor muy alto puede permitir un pico propio de la oscilación y un valor má
 $$ R_{snb} \ge Z_{0} $$
 El valor elegido fue:
     $$ R_{snb}=340\Omega $$
-    \item Se elige una capacitor para la red snubber cuya capacidad sea igual o hasta 4 veces superior a la capacidad parásita del circuito. 
+    \item Se elige un capacitor para la red snubber cuya capacidad sea igual o hasta 4 veces superior a la capacidad parásita del circuito. 
     $$ C_{p_2}\leq C_{snb}\leq 4C_{p_2} $$
     Se optó por un factor 3:
     $$ C_{snb}=C_{p_{0}}=1.5nF $$
