--- a/sections/marco_teorico.tex
+++ b/sections/marco_teorico.tex
@@ -571,6 +571,9 @@ Según la hoja de datos, los valores recomendados para el filtro RC externo son:
 $$ 470pF\leq C_t\leq 10\mu F$$
 $$ 1.8k\Omega\leq R_t\leq 500k\Omega $$
 
+Se anticipa que una incorrecta elección de $R_t$ y $C_t$ para el TL494 fuera de los valores recomendados por el fabricante generaba variaciones muy grandes de la frecuencia de conmutación, 
+lo cual causaba inestabilidad en la tensión de salida. 
+Utilizando valores recomendados para ambos componentes se logró que la frecuencia posea una gran estabilidad.
 Para lograr la frecuencia de $f=125kHz$ se eligió un capacitor de $1nF$ y para la resistencia de $8k\Omega$ se ajustó un potenciómetro de $10k\Omega$. 
 
 El comparador permite la modulación de los pulsos de salida, comparando la rampa de tensión sobre el capacitor $C_t$ con cualquiera de las dos señales de control presentes en las salidas de los amplificadores de error.
