Co-authored-by: nicoelcapo98 <nicoelcapo98@users.noreply.github.com>

--- a/sections/apendice.tex
+++ b/sections/apendice.tex
@@ -1,12 +1,13 @@
 \newpage
 \newgeometry{left=3cm,right=1.5cm,top=1cm,bottom=1.5cm}
 \appendix
+
 \begin{landscape}
+% Insertar imagen de la simulación de la etapa de carga
 \begin{center}
     \bfseries\LARGE Apéndice \par
 \end{center}
-
-% Insertar imagen de la simulación de la etapa de carga
+En esta sección se presenta el circuito del cargador y de su prototipo simulados en LTSpice junto al perfil de carga de cada modo.
 \begin{figure}[hbt]
     \centering
     \includegraphics[width=\linewidth]{images/carga_completa_step.png}
